Update display tittle h3

--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
@@ -137,7 +137,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/Categories/StudentList" id="linkClassList" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                    <a class="dropdown-item" href="/Categories/StudentList" id="linkStudentList" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
                                        onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                        onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
                                         <i class="bi bi-person-lines-fill"></i>  Sinh Viên
@@ -224,7 +224,10 @@
                 '/Categories/SchoolYear': 'linkSchoolYear',
                 '/Categories/ClassList': 'linkClassList',
                 '/Categories/SemesterPlan': 'linkSemesterPlan',
-                '/Categories/EndSemesterReport': 'linkEndSemesterReport'
+                '/Categories/EndSemesterReport': 'linkEndSemesterReport',
+                '/Categories/StudentList': 'linkStudentList',
+                '/Announcement/AnnouncementList': 'linkAnnouncement',
+                '/Announcement/MyAnnouncements': 'linkMyAnnouncement',
             };
 
             // Set the selected state
