--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
@@ -171,30 +171,31 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" role="button" aria-expanded="false" aria-controls="dropdownMenu5" id="toggleMenu5"
-                               onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
-                               onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                <i class="bi bi-chat-dots"></i> TRAO ĐỔI <i class="bi bi-caret-down-fill" style="float:right;"></i>
-                            </a>
-                            <ul class="collapse" id="dropdownMenu5" style="list-style-type: none; padding-left: 35px;">
-                                <li>
-                                    <a class="dropdown-item" href="" id="linkReceive" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
-                                       onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
-                                       onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                        <i class="bi bi-envelope-open"></i> Nhận
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="" id="linkSend" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
-                                       onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
-                                       onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                        <i class="bi bi-send"></i> Gửi
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-
+                     
+                            <li class="nav-item">
+                                <a class="nav-link" role="button" aria-expanded="false" aria-controls="dropdownMenu5" id="toggleMenu5"
+                                   onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                                   onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                    <i class="bi bi-chat-dots"></i> TRAO ĐỔI <i class="bi bi-caret-down-fill" style="float:right;"></i>
+                                </a>
+                                <ul class="collapse" id="dropdownMenu5" style="list-style-type: none; padding-left: 35px;">
+                                    <li>
+                                        <a class="dropdown-item" href="/Categories/ReceiveEmail" id="linkReceive" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                           onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                                           onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                            <i class="bi bi-envelope-open"></i> Nhận
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="/Categories/SentEmail" id="linkSend" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                           onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                                           onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                            <i class="bi bi-send"></i> Gửi
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link" href="/Statistics/ShowStatistics" id="linkStatistics" style="text-decoration:none;"
                                onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
@@ -202,7 +203,7 @@
                                 <i class="bi bi-graph-up"></i> THỐNG KÊ
                             </a>
                         </li>
-                        </li>
+                        
                     </ul>
                 </div>
             </nav>
