Fix defect sprint 3

--- a/CAPSTONE_TEAM01_2024/Views/Categories/StudentList.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/StudentList.cshtml
@@ -232,7 +232,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="EditSchoolId" class="form-label">Mã Số SV</label>
-                        <input type="text" class="form-control" id="EditSchoolId" name="SchoolId" required>
+                        <input type="text" class="form-control" id="EditSchoolId" name="SchoolId" required readonly>
                     </div>
                     <div class="mb-3">
                         <label for="EditEmail" class="form-label">Email</label>
