Chuyển các thay đổi từ nhánh master sang Nam_Leader

--- a/CAPSTONE_TEAM01_2024/Views/Categories/SentEmail.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SentEmail.cshtml
@@ -195,7 +195,8 @@ Layout = "_PersonnelLayout";
                 <h5>Ngày Gửi:</h5>
                 <p id="detailDate"></p>
                 <h5>Tệp Đính Kèm:</h5>
-                <img id="detailAttachment" src="" alt="Hình ảnh đính kèm" class="img-fluid" style="max-width: 100%; height: auto; display: none;">
+                <img id="detailAttachmentgit status
+" src="" alt="Hình ảnh đính kèm" class="img-fluid" style="max-width: 100%; height: auto; display: none;">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
