Duplicate Plan completed

--- a/CAPSTONE_TEAM01_2024/Views/Categories/SemesterPlan.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SemesterPlan.cshtml
@@ -262,7 +262,15 @@ bool isNotAdvisor = !roles.Contains("CVHT");
                                                     onclick="openSubmitSemesterPlan(@plan.PlanId)">
                                                 <i class="fa-solid fa-upload custom-icon"></i>
                                             </button>
-                                        }
+                                        }   
+                                        <form method="post" action="/Categories/DuplicatePlan" style="display:inline;">
+                                            <input type="hidden" name="planId" value="@plan.PlanId" />
+                                            <button class="btn btn-outline-warning btn-sm duplicate-btn"
+                                                    type="submit"
+                                                    title="Nhân Bản">
+                                                <i class="bi bi-files"></i>
+                                            </button>
+                                        </form>
                                         <form action="/Categories/ExportPlan" method="post" style="display: inline;">
                                             <input type="hidden" name="planId" value="@plan.PlanId" />
                                             <button type="submit" class="btn btn-outline-info btn-sm" title="Xuất">
@@ -681,7 +689,6 @@ bool isNotAdvisor = !roles.Contains("CVHT");
         </div>
     </div>
 </div>
-
 
 <!-- Edit Plan Modal -->
 <div class="modal fade" id="EditSemesterPlanModal" tabindex="-1" aria-labelledby="EditSemesterPlanModalLabel" aria-hidden="true">
