--- a/CAPSTONE_TEAM01_2024/Views/Categories/SentEmail.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SentEmail.cshtml
@@ -1,8 +1,9 @@
-@model IEnumerable<CAPSTONE_TEAM01_2024.Models.Email>
+@model CAPSTONE_TEAM01_2024.ViewModels.SentEmailViewModel
 
 @{
 ViewData["Title"] = "Sent Email";
 Layout = "_PersonnelLayout";
+    int number = (Model.SentEmail.PageIndex - 1) * Model.SentEmail.PageSize;
 }
 
 <div class="content-wrapper" style="min-height: 912.2px;">
@@ -63,43 +64,84 @@ Layout = "_PersonnelLayout";
                         </tr>
                         </thead>        
                         <tbody id="data-table">
-                        @if (Model != null && Model.Any())
-                        {
-                            <tbody>
-                            @foreach (var emailItem in Model)
+                            @foreach (var email in Model.SentEmail)
                             {
                                 <tr class="text-center">
-                                    <td>@emailItem.Sender</td>
-                                    <td>@emailItem.Recipients.FirstOrDefault()?.User.Email</td>
-                                    <td>@emailItem.Subject</td>
-                                    <td>@emailItem.SentDate.ToString("yyyy-MM-dd")</td>
-                                    <td>@emailItem.Status</td>
+                                    <td>@email.Sender</td>
+                                    <td>@email.Recipients.FirstOrDefault()?.User.Email</td>
+                                    <td>@email.Subject</td>
+                                    <td>@email.SentDate.ToString("yyyy-MM-dd")</td>
+                                    <td>@email.Status</td>
                                     <td class="text-center">
                                         <!-- Nút Xem Chi Tiết -->
                                         <button type="button" class="btn btn-outline-info btn-sm btn-view-email"
                                                 data-bs-toggle="modal" data-bs-target="#DetailMailModal"
-                                                data-email-id="@emailItem.EmailId">
+                                                data-email-id="@email.EmailId">
                                             <i class="fa-solid fa-eye custom-icon"></i>
                                         </button>
 
                                         <!-- Nút Xóa -->
                                         <button type="button" class="btn btn-outline-danger btn-sm"
                                                 data-bs-toggle="modal" data-bs-target="#DeleteMailModal"
-                                                data-email-id="@emailItem.EmailId" onclick="openDeleteModal(this)">
+                                                data-email-id="@email.EmailId" onclick="openDeleteModal(this)">
                                             <i class="fa-solid fa-trash custom-icon"></i>
                                         </button>
                                     </td>
                                 </tr>
                             }
-                            </tbody>
-                        }
 
                         </tbody>
                     </table>
 
                     <nav aria-label="Page navigation">
                         <ul class="pagination justify-content-end">
-                            <!-- Pagination items will go here -->
+                            @if (Model.SentEmail.HasPreviousPage)
+                            {
+                                <li class="page-item">
+                                    <a class="page-link" asp-action="SentEmail" asp-route-pageIndex="@(Model.SentEmail.PageIndex - 1)" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                    </a>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="page-item disabled">
+                                    <a class="page-link" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                    </a>
+                                </li>
+                            }
+                            @for (var i = 1; i <= Model.SentEmail.TotalPages; i++)
+                            {
+                                if (i == Model.SentEmail.PageIndex)
+                                {
+                                    <li class="page-item active">
+                                        <a class="page-link">@i</a>
+                                    </li>
+                                }
+                                else
+                                {
+                                    <li class="page-item">
+                                        <a class="page-link" asp-action="SentEmail" asp-route-pageIndex="@i">@i</a>
+                                    </li>
+                                }
+                            }
+                            @if (Model.SentEmail.HasNextPage)
+                            {
+                                <li class="page-item">
+                                    <a class="page-link" asp-action="SentEmail" asp-route-pageIndex="@(Model.SentEmail.PageIndex + 1)" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                    </a>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="page-item disabled">
+                                    <a class="page-link" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                    </a>
+                                </li>
+                            }
                         </ul>
                     </nav>
                 </div>
@@ -118,7 +160,7 @@ Layout = "_PersonnelLayout";
             </div>
             <div class="modal-body">
                 <form id="addMailForm" method="post" action="@Url.Action("SentEmail", "Categories")" enctype="multipart/form-data">
-                    @foreach (var emails in Model)
+                    @foreach (var emails in Model.SentEmail)
                     {
                     <input type="hidden" id="threadId" name="threadId" value="@emails.ThreadId" />
                     }
